--- a/soccer_news.html
+++ b/soccer_news.html
@@ -18,6 +18,7 @@
 <body>
     <h1>This. Is. Soccer.</h1>
     <button id="refresh">Newest Stories</button>
+    <h6 id="last-updated">Click the button to get the newest updates!</h6>
     <ul id="news-list"></ul>
     <!-- link to JQUERY Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
